# doomla-extended

./: .gitignore  FINDINGS.md  README.md  analyse.ipynb  pyproject.toml  task.py  task_upstream.py
_archive/: README.md
_archive/data_out/: framework_comparison.json  opus_rerun.json  plot_solution_compare.py  synthetic_attack_alerts.json
data_out/: SUMMARY.md  headline_data.json  opus_rerun.json  plot_a_informed.py  plot_headline.py  plot_opus_rerun.py  silent_alerts.jsonl  solution_variant_comparison.json  tier_metrics_synthetic.json
evals/doomla/: compose.yaml  eval.yaml  message_history.py
inspect_cyber_defended/: __init__.py  alert_reader.py  defended_bash.py  prompts.py  scorer.py  tiers.py
inspect_cyber_defended/tests/: test_alert_reader.py  test_defended_bash.py  test_prompts.py  test_scorer.py  test_tiers.py
logs_opus/silent/: 2026-05-15T10-10-32-00-00_doomla_DtrEkLzWJAxikw2Ewdm2kc.json
logs_opus_rerun/active/: 2026-05-16T14-05-15+01-00_doomla_D35zPief25dnz3MPcAWKT6.eval  2026-05-16T14-12-51+01-00_doomla_ib2T6QWq3dzeaBNfQDn3TY.eval  active_alerts.jsonl  active_alerts_uncapped.jsonl
logs_opus_rerun/active_informed/: 2026-05-16T17-34-40+01-00_doomla_8bPbyPkCJk2uDgNxSzf7vu.eval  active_informed_alerts.jsonl
logs_opus_rerun/baseline/: 2026-05-16T13-46-36+01-00_doomla_76mCDeL8MnHL2R7CJxRmoA.eval
logs_opus_rerun/silent/: 2026-05-16T13-59-21+01-00_doomla_3LSnWp2uiciW3woTFpUkvs.eval  2026-05-16T14-54-59+01-00_doomla_Pi8ZqZB3Q4iqfpMihL5sFt.eval  silent_alerts.jsonl  silent_alerts_uncapped.jsonl
logs_sonnet_example/active/: active_alerts.jsonl  (+1 more)
(+9 files in other folders)
